# ros-bfl

./: .gitignore  README.md  plot_ros_simulation.m  robCov.csv  robEst.csv  robMeas.csv  robPos.csv
src/base-particle-filtering/: CMakeLists.txt  package.xml
src/base-particle-filtering/include/: customParticleFilter.h  mobile_robot.h  mobile_robot_wall_cts.h  nonlinearMeasurementPdf.h  nonlinearSystemPdf.h  nonlinearanalyticconditionalgaussianmobile.h  planar_agent.h  planaragentconditionalgaussian.h
src/base-particle-filtering/src/: mobile_robot.cpp  mobile_robot_fullstate.cpp  node_fullState_pf.cpp  node_planaragent_pf.cpp  node_wall_pf.cpp  nonlinearMeasurementPdf.cpp  nonlinearSystemPdf.cpp  particleFilter_node.cpp  planar_agent.cpp  planaragentconditionalgaussian.cpp
src/spatial-particle-filtering/: CMakeLists.txt  package.xml
src/spatial-particle-filtering/include/: pclMeasurementPdf.h  planarSystemPdf.h  spatialSystemPdf.h  spatial_agent.h  spatial_agent_params.h  spatialagentconditionalgaussian.h  stateMeasurementPdf.h
src/spatial-particle-filtering/src/: customParticleFilter.cpp  node_planaragent_pf.cpp  node_spatialagent_pf.cpp  pclMeasurementPdf.cpp  planarSystemPdf.cpp  spatialSystemPdf.cpp  spatial_agent.cpp  spatialagentconditionalgaussian.cpp  stateMeasurementPdf.cpp
